--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+nbproject/private/private.properties
+dist/web-files/dtjava.js
+dist/UTTT.jnlp
+dist/UTTT.html
+build/built-jar.properties
